--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,26 +7,25 @@
 
 spring:
   redis:
-    host: ${REDIS_HOST}
-    port: 17632
-    password: ${REDIS_PASSWORD}
+    host: localhost
+    port: 6379
 
-#    uri: redis://default:xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq@redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com:17632
-#    host: redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com
-#    port: 17632
-#    password: xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq
+  #    uri: redis://default:xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq@redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com:17632
+  #    host: redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com
+  #    port: 17632
+  #    password: xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq
 
   data:
     mongodb:
-      uri: ${MONGODB_URI}
+      uri: mongodb+srv://bealuckydev:Und8gmvN1PPxhTcS@cluster0.zu4xk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       database: journaldb
       auto-index-creation: true
 
   mail:
     host: smtp.gmail.com    #server which handle email service
     port: 587     # for encrypted data
-    username: ${JAVA_EMAIL}
-    password: ${JAVA_EMAIL_PASSWORD}
+    username: bealucky.dev@gmail.com
+    password: dbksbnbqjtlpixrl
     properties:
       mail:
         smtp:
@@ -35,10 +34,10 @@ spring:
             enable: true  #encryption
 
 server:
-  port: ${SERVER_PORT}
+  port: 8081
   servlet:
     context-path: /journal
 
 weather:
   api:
-    key: ${WEATHER_API_KEY}
+    key: 17cb72e3fe119e19eed6f4b9d260e52d
