--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,14 +6,39 @@
 #spring.data.mongodb.auto-index-creation=true
 
 spring:
+  redis:
+    host: ${REDIS_HOST}
+    port: 17632
+    password: ${REDIS_PASSWORD}
+
+  #    uri: redis://default:xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq@redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com:17632
+  #    host: redis-17632.c264.ap-south-1-1.ec2.redns.redis-cloud.com
+  #    port: 17632
+  #    password: xLCBEYBXQ7R1XB5PZmOYTYLNgXNusIWq
+
   data:
     mongodb:
-      uri: mongodb+srv://bealuckydev:Und8gmvN1PPxhTcS@cluster0.zu4xk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      uri: ${MONGODB_URI}
       database: journaldb
       auto-index-creation: true
 
+  mail:
+    host: smtp.gmail.com    #server which handle email service
+    port: 587     # for encrypted data
+    username: ${JAVA_EMAIL}
+    password: ${JAVA_EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true   #
+          starttls:   #start transport layer security
+            enable: true  #encryption
+
 server:
-  port: 8091
+  port: ${SERVER_PORT}
   servlet:
     context-path: /journal
 
+weather:
+  api:
+    key: ${WEATHER_API_KEY}
