--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@
 #spring.data.mongodb.database=journaldb
 #spring.data.mongodb.auto-index-creation=true
 
-spring.profiles.active=dev
+spring.profiles.active=prod
